runtime/tests/cases/variables/errors/temp_shadows_extern.bobbin
extern gold
temp gold = 50

You have {gold} gold.
